--- a/doc/latex/class_anyarg.tex
+++ b/doc/latex/class_anyarg.tex
@@ -49,26 +49,26 @@ bool \hyperlink{class_anyarg_ad5f726956b9525fce547f359bbdcddfc}{add\+\_\+option\
 {\bf }\par
 \begin{DoxyCompactItemize}
 \item 
-bool \hyperlink{class_anyarg_a1305e8be180c7247cb9bdb0994b00597}{found\+\_\+flag} (const char $\ast$name) const 
-\begin{DoxyCompactList}\small\item\em Check whether a flag can be found in the command line. \end{DoxyCompactList}\item 
-bool \hyperlink{class_anyarg_a8663ada26b0add34878d0929dc436fc5}{found\+\_\+flag} (char letter) const 
-\begin{DoxyCompactList}\small\item\em Check whether a flag can be found in the command line. \end{DoxyCompactList}\end{DoxyCompactItemize}
+bool \hyperlink{class_anyarg_a185d6b303115e47fac952d2499cdf548}{is\+\_\+true} (const char $\ast$name) const 
+\begin{DoxyCompactList}\small\item\em Check whether a flag is set to true in the command line. \end{DoxyCompactList}\item 
+bool \hyperlink{class_anyarg_a5a3e219f85a0dea283876ece00287751}{is\+\_\+true} (char letter) const 
+\begin{DoxyCompactList}\small\item\em Check whether a flag is set to true in the command line. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 {\bf }\par
 \begin{DoxyCompactItemize}
 \item 
 const char $\ast$ \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str} (const char $\ast$name) const 
-\begin{DoxyCompactList}\small\item\em Get the value of an option. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Get option value. \end{DoxyCompactList}\item 
 const char $\ast$ \hyperlink{class_anyarg_a8b5d891a9e146c17cd4d8038c5265fcc}{get\+\_\+value\+\_\+str} (char letter) const 
-\begin{DoxyCompactList}\small\item\em Get the value of an option. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Get option value. \end{DoxyCompactList}\item 
 int \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int} (const char $\ast$name) const 
-\begin{DoxyCompactList}\small\item\em Get the value of an option. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Get option value. \end{DoxyCompactList}\item 
 int \hyperlink{class_anyarg_a2c45edbcd6de87992c227c3994eb7e72}{get\+\_\+value\+\_\+int} (char letter) const 
-\begin{DoxyCompactList}\small\item\em Get the value of an option. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Get option value. \end{DoxyCompactList}\item 
 double \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double} (const char $\ast$name) const 
-\begin{DoxyCompactList}\small\item\em Get the value of an option. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Get option value. \end{DoxyCompactList}\item 
 double \hyperlink{class_anyarg_ad607e8d76b475ff3c5a9ccb4032258d7}{get\+\_\+value\+\_\+double} (char letter) const 
-\begin{DoxyCompactList}\small\item\em Get the value of an option. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Get option value. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 
@@ -356,16 +356,16 @@ The frist elements of {\ttfamily argv} M\+U\+S\+T be the name of the program.
 \begin{Desc}
 \item[Examples\+: ]\par
 \hyperlink{_2_users_2liqb_2dev_2anyarg_2anyarg_8h-example}{/\+Users/liqb/dev/anyarg/anyarg.\+h}.\end{Desc}
-\hypertarget{class_anyarg_a1305e8be180c7247cb9bdb0994b00597}{}\index{Anyarg@{Anyarg}!found\+\_\+flag@{found\+\_\+flag}}
-\index{found\+\_\+flag@{found\+\_\+flag}!Anyarg@{Anyarg}}
-\subsubsection[{found\+\_\+flag}]{\setlength{\rightskip}{0pt plus 5cm}bool Anyarg\+::found\+\_\+flag (
+\hypertarget{class_anyarg_a185d6b303115e47fac952d2499cdf548}{}\index{Anyarg@{Anyarg}!is\+\_\+true@{is\+\_\+true}}
+\index{is\+\_\+true@{is\+\_\+true}!Anyarg@{Anyarg}}
+\subsubsection[{is\+\_\+true}]{\setlength{\rightskip}{0pt plus 5cm}bool Anyarg\+::is\+\_\+true (
 \begin{DoxyParamCaption}
 \item[{const char $\ast$}]{name}
 \end{DoxyParamCaption}
-) const}\label{class_anyarg_a1305e8be180c7247cb9bdb0994b00597}
+) const}\label{class_anyarg_a185d6b303115e47fac952d2499cdf548}
 
 
-Check whether a flag can be found in the command line. 
+Check whether a flag is set to true in the command line. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -375,21 +375,21 @@ Check whether a flag can be found in the command line.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-{\ttfamily true} if a flag is found, {\ttfamily false} if not. 
+{\ttfamily true} if a flag is set in command line, {\ttfamily false} if not. 
 \end{DoxyReturn}
 \begin{Desc}
 \item[Examples\+: ]\par
 \hyperlink{_2_users_2liqb_2dev_2anyarg_2anyarg_8h-example}{/\+Users/liqb/dev/anyarg/anyarg.\+h}.\end{Desc}
-\hypertarget{class_anyarg_a8663ada26b0add34878d0929dc436fc5}{}\index{Anyarg@{Anyarg}!found\+\_\+flag@{found\+\_\+flag}}
-\index{found\+\_\+flag@{found\+\_\+flag}!Anyarg@{Anyarg}}
-\subsubsection[{found\+\_\+flag}]{\setlength{\rightskip}{0pt plus 5cm}bool Anyarg\+::found\+\_\+flag (
+\hypertarget{class_anyarg_a5a3e219f85a0dea283876ece00287751}{}\index{Anyarg@{Anyarg}!is\+\_\+true@{is\+\_\+true}}
+\index{is\+\_\+true@{is\+\_\+true}!Anyarg@{Anyarg}}
+\subsubsection[{is\+\_\+true}]{\setlength{\rightskip}{0pt plus 5cm}bool Anyarg\+::is\+\_\+true (
 \begin{DoxyParamCaption}
 \item[{char}]{letter}
 \end{DoxyParamCaption}
-) const}\label{class_anyarg_a8663ada26b0add34878d0929dc436fc5}
+) const}\label{class_anyarg_a5a3e219f85a0dea283876ece00287751}
 
 
-Check whether a flag can be found in the command line. 
+Check whether a flag is set to true in the command line. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -399,7 +399,7 @@ Check whether a flag can be found in the command line.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-{\ttfamily true} if a flag is found, {\ttfamily false} if not. 
+{\ttfamily true} if a flag is set in command line, {\ttfamily false} if not. 
 \end{DoxyReturn}
 \hypertarget{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{}\index{Anyarg@{Anyarg}!get\+\_\+value\+\_\+str@{get\+\_\+value\+\_\+str}}
 \index{get\+\_\+value\+\_\+str@{get\+\_\+value\+\_\+str}!Anyarg@{Anyarg}}
@@ -410,7 +410,7 @@ Check whether a flag can be found in the command line.
 ) const}\label{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}
 
 
-Get the value of an option. 
+Get option value. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -422,6 +422,9 @@ Get the value of an option.
 \begin{DoxyReturn}{Returns}
 The value of an option. If the value is not assigned in command line, the default value will be returned. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+get\+\_\+value functions should match with add\+\_\+option functions. Use \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str()}, \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int()}, \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double()} to get the value of an option whose value is of type string, int and double, respectively. 
+\end{DoxyNote}
 \hypertarget{class_anyarg_a8b5d891a9e146c17cd4d8038c5265fcc}{}\index{Anyarg@{Anyarg}!get\+\_\+value\+\_\+str@{get\+\_\+value\+\_\+str}}
 \index{get\+\_\+value\+\_\+str@{get\+\_\+value\+\_\+str}!Anyarg@{Anyarg}}
 \subsubsection[{get\+\_\+value\+\_\+str}]{\setlength{\rightskip}{0pt plus 5cm}const char $\ast$ Anyarg\+::get\+\_\+value\+\_\+str (
@@ -431,7 +434,7 @@ The value of an option. If the value is not assigned in command line, the defaul
 ) const}\label{class_anyarg_a8b5d891a9e146c17cd4d8038c5265fcc}
 
 
-Get the value of an option. 
+Get option value. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -443,6 +446,9 @@ Get the value of an option.
 \begin{DoxyReturn}{Returns}
 The value of an option. If the value is not assigned in command line, the default value will be returned. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+get\+\_\+value functions should match with add\+\_\+option functions. Use \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str()}, \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int()}, \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double()} to get the value of an option whose value is of type string, int and double, respectively. 
+\end{DoxyNote}
 \hypertarget{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{}\index{Anyarg@{Anyarg}!get\+\_\+value\+\_\+int@{get\+\_\+value\+\_\+int}}
 \index{get\+\_\+value\+\_\+int@{get\+\_\+value\+\_\+int}!Anyarg@{Anyarg}}
 \subsubsection[{get\+\_\+value\+\_\+int}]{\setlength{\rightskip}{0pt plus 5cm}int Anyarg\+::get\+\_\+value\+\_\+int (
@@ -452,7 +458,7 @@ The value of an option. If the value is not assigned in command line, the defaul
 ) const}\label{class_anyarg_ae254a7571efbf058ad98fcd00a176470}
 
 
-Get the value of an option. 
+Get option value. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -464,6 +470,9 @@ Get the value of an option.
 \begin{DoxyReturn}{Returns}
 The value of an option. If the value is not assigned in command line, the default value will be returned. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+get\+\_\+value functions should match with add\+\_\+option functions. Use \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str()}, \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int()}, \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double()} to get the value of an option whose value is of type string, int and double, respectively. 
+\end{DoxyNote}
 \begin{Desc}
 \item[Examples\+: ]\par
 \hyperlink{_2_users_2liqb_2dev_2anyarg_2anyarg_8h-example}{/\+Users/liqb/dev/anyarg/anyarg.\+h}.\end{Desc}
@@ -476,7 +485,7 @@ The value of an option. If the value is not assigned in command line, the defaul
 ) const}\label{class_anyarg_a2c45edbcd6de87992c227c3994eb7e72}
 
 
-Get the value of an option. 
+Get option value. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -488,6 +497,9 @@ Get the value of an option.
 \begin{DoxyReturn}{Returns}
 The value of an option. If the value is not assigned in command line, the default value will be returned. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+get\+\_\+value functions should match with add\+\_\+option functions. Use \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str()}, \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int()}, \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double()} to get the value of an option whose value is of type string, int and double, respectively. 
+\end{DoxyNote}
 \hypertarget{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{}\index{Anyarg@{Anyarg}!get\+\_\+value\+\_\+double@{get\+\_\+value\+\_\+double}}
 \index{get\+\_\+value\+\_\+double@{get\+\_\+value\+\_\+double}!Anyarg@{Anyarg}}
 \subsubsection[{get\+\_\+value\+\_\+double}]{\setlength{\rightskip}{0pt plus 5cm}double Anyarg\+::get\+\_\+value\+\_\+double (
@@ -497,7 +509,7 @@ The value of an option. If the value is not assigned in command line, the defaul
 ) const}\label{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}
 
 
-Get the value of an option. 
+Get option value. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -509,6 +521,9 @@ Get the value of an option.
 \begin{DoxyReturn}{Returns}
 The value of an option. If the value is not assigned in command line, the default value will be returned. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+get\+\_\+value functions should match with add\+\_\+option functions. Use \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str()}, \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int()}, \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double()} to get the value of an option whose value is of type string, int and double, respectively. 
+\end{DoxyNote}
 \begin{Desc}
 \item[Examples\+: ]\par
 \hyperlink{_2_users_2liqb_2dev_2anyarg_2anyarg_8h-example}{/\+Users/liqb/dev/anyarg/anyarg.\+h}.\end{Desc}
@@ -521,7 +536,7 @@ The value of an option. If the value is not assigned in command line, the defaul
 ) const}\label{class_anyarg_ad607e8d76b475ff3c5a9ccb4032258d7}
 
 
-Get the value of an option. 
+Get option value. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -533,6 +548,9 @@ Get the value of an option.
 \begin{DoxyReturn}{Returns}
 The value of an option. If the value is not assigned in command line, the default value will be returned. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+get\+\_\+value functions should match with add\+\_\+option functions. Use \hyperlink{class_anyarg_a9788b24659c4b7ab69cfb8b1f55f1c15}{get\+\_\+value\+\_\+str()}, \hyperlink{class_anyarg_ae254a7571efbf058ad98fcd00a176470}{get\+\_\+value\+\_\+int()}, \hyperlink{class_anyarg_a8d46bd713bb7bc5bd303e23afd5609d1}{get\+\_\+value\+\_\+double()} to get the value of an option whose value is of type string, int and double, respectively. 
+\end{DoxyNote}
 \hypertarget{class_anyarg_a3cffbadc85f2fd4086e9a91ac1c5d666}{}\index{Anyarg@{Anyarg}!get\+\_\+argc@{get\+\_\+argc}}
 \index{get\+\_\+argc@{get\+\_\+argc}!Anyarg@{Anyarg}}
 \subsubsection[{get\+\_\+argc}]{\setlength{\rightskip}{0pt plus 5cm}int Anyarg\+::get\+\_\+argc (
