--- a/doc/latex/md__r_e_a_d_m_e.tex
+++ b/doc/latex/md__r_e_a_d_m_e.tex
@@ -26,15 +26,15 @@ int \hyperlink{example_8cpp_a3c04138a5bfe5d72780bb7e82a18e627}{main(int argc, ch
 opt.parse_argv(argc, argv);
 
 // generate formatted usage information for all options
-if (opt.found_flag("help")) {
+if (opt.is_true("help")) {
     printf("%s\n", opt.auto_usage());
     exit(0);
 }
 
 // access option values
-if (opt.found_flag("all"))
+if (opt.is_true("all"))
     printf("option --all is set in the command line\n");
-if (opt.found_flag('v'))
+if (opt.is_true('v'))
     printf("verbose mode is opened\n");
 printf("The value of option -b is %d\n", opt.get_value_int("buffer-size"));
 printf("The value of option --min is %f\n", opt.get_value_double("min"));
